--- a/server/views/dischargeAddress/index.pug
+++ b/server/views/dischargeAddress/index.pug
@@ -76,4 +76,4 @@ block content
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="licenceNumber" value=licenceNumber)
             input.requiredButton.button(type="submit" value="Continue")
-            a.requiredButton.button.button-secondary(href="/dashboard" role="button") Back to dashboard
+            a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
