--- a/server/views/licenceDetails/index.pug
+++ b/server/views/licenceDetails/index.pug
@@ -19,4 +19,4 @@ block content
     div#continueBtns.inlineButtons
 
         a.requiredButton.button(href="/licenceDetails/"+licenceId role="button") Continue
-        a.requiredButton.button.button-secondary(href="/dashboard" role="button") Back to dashboard
+        a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
