--- a/server/views/details/index.pug
+++ b/server/views/details/index.pug
@@ -84,6 +84,9 @@ block content
     div#continueBtns.inlineButtons
         form(method="post", name="formPrint")
             input(type="hidden" name="_csrf" value=csrfToken)
-            input(type="hidden" name="nomisId" value=nomisId)
+            if prisonerInfo
+                input(type="hidden" name="nomisId" value=prisonerInfo.offenderNo || '')
+                input(type="hidden" name="firstName" value=prisonerInfo.firstName || '')
+                input(type="hidden" name="lastName" value=prisonerInfo.lastName || '')
             input.requiredButton.button(type="submit" value="Continue")
         a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
