--- a/server/views/dischargeAddress/index.pug
+++ b/server/views/dischargeAddress/index.pug
@@ -7,15 +7,17 @@ block content
     div.grid-row.largeMarginBottom
         div#addressDetails.column-two-thirds.boxPanel
             div#address.column-one-third.midMarginBottom
-                |Address one
-                if (line1)
-                    span#address1.block.bold #{line1}
-                if (line2)
-                    span.block.bold #{line2}
-                if (line3)
-                    span.block.bold #{line3}
-                if (postCode)
-                    span.block.bold #{postCode}
+                for address in addresses
+                    div
+                        |Address
+                        if (address.address1)
+                            span#address1.block.bold #{address.address1}
+                        if (address.address2)
+                            span.block.bold #{address.address2}
+                        if (address.address3)
+                            span.block.bold #{address.address3}
+                        if (address.postCode)
+                            span.block.bold #{address.postCode}
 
             div.column-one-third.midMarginBottom
                 if (contact)
@@ -28,52 +30,45 @@ block content
                         | Contact number
                         span#contactNumber.block.bold #{contactNumber}
 
-                span.block
-                    | Home address?
-                    span#homeAddress.block.bold
-                        if (homeAddress)
-                            | Yes
-                        else
-                            | No
 
-            div.column-one-third.midMarginBottom
-                | Reason for request
-                if (reason)
+            if (reason)
+                div.column-one-third.midMarginBottom
+                    | Reason for request
                     span#reason.block.bold #{reason}
 
     form#acceptanceForm(method='POST')
-        div.form-group
-            fieldset.inline
-                legend.midMarginBottom Is this address acceptable?
-
-                div.multiple-choice
-                    input(id="radioYes" type="radio" name="acceptable-address" value="Yes")
-                    label(for="radioYes") Yes
-
-                div.multiple-choice(data-target="addressForm")
-                    input(id="radioNo" type="radio" name="acceptable-address" value="No")
-                    label(for="radioNo") No
-
-                div#addressForm.panel.panel-border-narrow.js-hidden
-                    div.form-group
-                        label.form-label(for="building") Building and street
-                        input#building.midMarginBottom.form-control(name="building" type="text")
-                        input#street.form-control.block(name="street" type="text")
-
-                    div.form-group
-                        label.form-label(for="town") Town or city
-                        input#town.form-control(name="town" type="text")
-
-                    div.form-group
-                        label.form-label(for="postcode") Postcode
-                        input#postcode.form-control.small(name="postcode" type="text")
-
-                    div.form-group
-                        label.form-label(for="telephone") Telephone
-                        input#telephone.form-control.small(name="telephone" type="text")
+        //div.form-group
+        //    fieldset.inline
+        //        legend.midMarginBottom Is this address acceptable?
+        //
+        //        div.multiple-choice
+        //            input(id="radioYes" type="radio" name="acceptable-address" value="Yes")
+        //            label(for="radioYes") Yes
+        //
+        //        div.multiple-choice(data-target="addressForm")
+        //            input(id="radioNo" type="radio" name="acceptable-address" value="No")
+        //            label(for="radioNo") No
+        //
+        //        div#addressForm.panel.panel-border-narrow.js-hidden
+        //            div.form-group
+        //                label.form-label(for="building") Building and street
+        //                input#building.midMarginBottom.form-control(name="building" type="text")
+        //                input#street.form-control.block(name="street" type="text")
+        //
+        //            div.form-group
+        //                label.form-label(for="town") Town or city
+        //                input#town.form-control(name="town" type="text")
+        //
+        //            div.form-group
+        //                label.form-label(for="postcode") Postcode
+        //                input#postcode.form-control.small(name="postcode" type="text")
+        //
+        //            div.form-group
+        //                label.form-label(for="telephone") Telephone
+        //                input#telephone.form-control.small(name="telephone" type="text")
 
         div#continueBtns.inlineButtons
             input(type="hidden" name="_csrf" value=csrfToken)
-            input(type="hidden" name="licenceNumber" value=licenceNumber)
+            input(type="hidden" name="nomisId" value=nomisId)
             input.requiredButton.button(type="submit" value="Continue")
             a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
