Add licence status column, group tasklist licences by status

--- a/server/views/tasklist/index.pug
+++ b/server/views/tasklist/index.pug
@@ -38,7 +38,7 @@ block content
 
                             td.requiredButton
                                 a.button.button-secondary(href="details/"+entry.offenderNo role="button")
-                                    if entry.inProgress
+                                    if entry.status === 'STARTED'
                                         |Continue
                                     else
                                         |Start
