--- a/server/views/additionalConditions/index.pug
+++ b/server/views/additionalConditions/index.pug
@@ -8,7 +8,7 @@ block content
         div.column-two-thirds
             p If the offender requires additional conditions adding to their licence select them below.
             span.block
-                a(href="#") View the seven standard conditions
+                a(href="./standard/"+nomisId) View the seven standard conditions
 
         div.column-one-third
             a.button.button-secondary(href="/reporting/"+nomisId role="button") No additional conditions required
