Use updated releases API. Set page-count header to match offender count

--- a/server/views/tasklist/index.pug
+++ b/server/views/tasklist/index.pug
@@ -29,8 +29,8 @@ block content
                                     | #{entry.offenderNo}
 
                             td.requiredEstablishment
-                                if entry.assignedLivingUnit && entry.assignedLivingUnit.description
-                                    | #{entry.assignedLivingUnit.description}
+                                if entry.agencyLocationDesc
+                                    | #{entry.agencyLocationDesc}
 
                             td.requiredDischargeDate
                                 if entry.releaseDate
