--- a/server/views/dischargeAddress/index.pug
+++ b/server/views/dischargeAddress/index.pug
@@ -8,7 +8,7 @@ block content
         div.form-group
             fieldset.inline
 
-                div#addressForm.panel.panel-border-narrow
+                div#addressForm
                     div.form-group
                         label.form-label(for="building") Building and street
                         input#building.midMarginBottom.form-control(name="address1" type="text")
