Fix postcode form

--- a/server/views/dischargeAddress/index.pug
+++ b/server/views/dischargeAddress/index.pug
@@ -20,7 +20,7 @@ block content
 
                     div.form-group
                         label.form-label(for="postcode") Postcode
-                        input#postcode.form-control.small(name="postcode" type="text")
+                        input#postcode.form-control.small(name="postCode" type="text")
 
         div#continueBtns.inlineButtons
             input(type="hidden" name="_csrf" value=csrfToken)
