Display licence data on review info page

--- a/server/views/licenceDetails/dischargeAddress.pug
+++ b/server/views/licenceDetails/dischargeAddress.pug
@@ -7,12 +7,12 @@ div.grid-row
                     div.grid-row
                         div.column-one-third Address
                         div.column-two-thirds
-                            if dischargeAddress.line1
-                                span.block #{dischargeAddress.line1}
-                            if dischargeAddress.line2
-                                span.block #{dischargeAddress.line2}
-                            if dischargeAddress.line3
-                                span.block #{dischargeAddress.line3}
+                            if dischargeAddress.address1
+                                span.block #{dischargeAddress.address1}
+                            if dischargeAddress.address2
+                                span.block #{dischargeAddress.address2}
+                            if dischargeAddress.address3
+                                span.block #{dischargeAddress.address3}
                             if dischargeAddress.postCode
                                 span.block #{dischargeAddress.postCode}
 
@@ -38,9 +38,7 @@ div.grid-row
                         div.column-one-third Home address?
                         div.column-two-thirds
                             if dischargeAddress.homeAddress
-                                | Yes
-                            else
-                                | No
+                                | #{dischargeAddress.homeAddress}
 
             div.column-full
                 div.borderBottomLight.smallPaddingTopBottom
