--- a/server/views/licenceDetails/index.pug
+++ b/server/views/licenceDetails/index.pug
@@ -12,7 +12,7 @@ block content
             if dischargeAddress
                 include ./dischargeAddress
 
-            if reporting
+            if reportingInstructions
                 include ./reportingInstructions
 
 
