Send licence changes status of licence record

--- a/server/views/licenceDetails/index.pug
+++ b/server/views/licenceDetails/index.pug
@@ -18,5 +18,5 @@ block content
 
     div#continueBtns.inlineButtons
 
-        a.requiredButton.button(href="/licenceDetails/"+licenceId role="button") Continue
+        a.requiredButton.button(href="/send/"+nomisId role="button") Continue
         a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
