--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -136,3 +136,12 @@ input.verySmall {
         padding: 5px 0 0 50px;
     }
 }
+
+
+.confirm-banner {
+    color: $white;
+    background-color: $govuk-blue;
+    padding: 15px;
+    text-align: center;
+    margin-bottom: 15px;
+}
